# chitin-core

./: .gitignore  Cargo.toml  README.md
configs/: consensus_params.yaml  economics.yaml  fleet.conf.example  model_configs.yaml  trial-node.toml
crates/chitin-cli/: Cargo.toml
crates/chitin-cli/src/: main.rs  output.rs  rpc_client.rs
crates/chitin-cli/src/commands/: init.rs  metagraph.rs  mod.rs  polyp.rs  query.rs  stake.rs  status.rs  wallet.rs
crates/chitin-consensus/: Cargo.toml
crates/chitin-consensus/src/: bonds.rs  epoch.rs  hardening.rs  lib.rs  metagraph.rs  scoring.rs  weights.rs  yuma.rs
crates/chitin-core/: Cargo.toml
crates/chitin-core/src/: consensus.rs  crypto.rs  embedding.rs  error.rs  identity.rs  lib.rs  metagraph.rs  polyp.rs  provenance.rs  traits.rs
crates/chitin-daemon/: Cargo.toml
crates/chitin-daemon/src/: config.rs  consensus_runner.rs  coral.rs  epoch_events.rs  gossip.rs  hardening_pipeline.rs  main.rs  peers.rs  scheduler.rs  shared.rs  state.rs  sync_loop.rs  tide.rs
crates/chitin-daemon/tests/: integration_phase4.rs
crates/chitin-drift/: Cargo.toml
crates/chitin-drift/src/: alignment.rs  detection.rs  lib.rs  molting.rs  versioning.rs
crates/chitin-economics/: Cargo.toml
crates/chitin-economics/src/: emission.rs  lib.rs  rewards.rs  slashing.rs  staking.rs  token.rs  treasury.rs
crates/chitin-p2p/: Cargo.toml
crates/chitin-p2p/src/: axon.rs  behaviour.rs  dendrite.rs  discovery.rs  gossip.rs  lib.rs  transport.rs
crates/chitin-reputation/: Cargo.toml
crates/chitin-reputation/src/: decay.rs  domain.rs  lib.rs  openrank.rs  trust_matrix.rs
crates/chitin-rpc/: Cargo.toml
crates/chitin-rpc/src/: lib.rs  middleware.rs  server.rs
crates/chitin-rpc/src/handlers/: admin.rs  metagraph.rs  mod.rs  node.rs  peer.rs  polyp.rs  query.rs  staking.rs  sync.rs  validation.rs  wallet.rs
crates/chitin-store/: Cargo.toml
crates/chitin-store/src/: bloom.rs  hardened.rs  hnsw.rs  ipfs.rs  lib.rs  rocks.rs  shard.rs
crates/chitin-sync/: Cargo.toml
crates/chitin-sync/src/: lib.rs  range.rs  reconcile.rs  vbf.rs
crates/chitin-verify/: Cargo.toml
crates/chitin-verify/src/: lib.rs  models.rs  prover.rs  verifier.rs
docker/: Dockerfile  Dockerfile.dev  docker-compose.trial.yml  docker-compose.yml
protos/: consensus.proto  economics.proto  metagraph.proto  polyp.proto  query.proto  sync.proto
scripts/: chitin-daemon.service  deploy-fleet.sh  generate-configs.sh  setup-node.sh  verify-trial.sh
sdk/python/: pyproject.toml
sdk/python/chitin/: __init__.py  agent.py  client.py  langchain.py  types.py
sdk/python/tests/: test_client.py
zk-circuits/embedding-proof/: Cargo.toml
zk-circuits/embedding-proof/src/: main.rs
