[package]
name = "chitin-cli"
version = "0.1.0"
edition = "2021"
description = "Developer CLI for the Chitin Protocol: init, wallet, polyp, query, stake, status, metagraph"
license = "Apache-2.0 OR MIT"

[[bin]]
name = "chitin"
path = "src/main.rs"

[dependencies]
chitin-core = { path = "../chitin-core" }
chitin-rpc = { path = "../chitin-rpc" }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tabled = "0.17"
tonic = "0.12"
toml = "0.8"
dirs = "5"
uuid = { version = "1", features = ["v7", "serde"] }
