[package]
name = "chitin-consensus"
version = "0.1.0"
edition = "2021"
description = "Yuma-Semantic consensus, scoring, weights, bonds, and epochs for the Chitin Protocol"
license = "Apache-2.0 OR MIT"

[dependencies]
chitin-core = { path = "../chitin-core" }
chitin-store = { path = "../chitin-store" }
chitin-verify = { path = "../chitin-verify" }
chitin-reputation = { path = "../chitin-reputation" }
chitin-drift = { path = "../chitin-drift" }
uuid = { version = "1", features = ["v7", "serde"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
thiserror = "2"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1"
