[package]
name = "chitin-core"
version = "0.1.0"
edition = "2021"
description = "Core types, traits, and crypto primitives for the Chitin Protocol"
license = "Apache-2.0 OR MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v7", "serde"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
sha2 = "0.10"
thiserror = "2"
async-trait = "0.1"
rand = "0.8"
