[package]
name = "chitin-daemon"
version = "0.1.0"
edition = "2021"
description = "Coral/Tide node daemon processes, scheduler, and state machine for the Chitin Protocol"
license = "Apache-2.0 OR MIT"

[[bin]]
name = "chitin-daemon"
path = "src/main.rs"

[dependencies]
chitin-core = { path = "../chitin-core" }
chitin-store = { path = "../chitin-store" }
chitin-verify = { path = "../chitin-verify" }
chitin-p2p = { path = "../chitin-p2p" }
chitin-sync = { path = "../chitin-sync" }
chitin-consensus = { path = "../chitin-consensus" }
chitin-reputation = { path = "../chitin-reputation" }
chitin-drift = { path = "../chitin-drift" }
chitin-economics = { path = "../chitin-economics" }
chitin-rpc = { path = "../chitin-rpc" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
toml = "0.8"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
uuid = { version = "1", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
