[package]
name = "chitin-drift"
version = "0.1.0"
edition = "2021"
description = "Drift detection, molting, alignment, and versioning for the Chitin Protocol"
license = "Apache-2.0 OR MIT"

[dependencies]
chitin-core = { path = "../chitin-core" }
chitin-store = { path = "../chitin-store" }
chitin-verify = { path = "../chitin-verify" }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
sha2 = "0.10"
