[package]
name = "chitin-economics"
version = "0.1.0"
edition = "2021"
description = "$CTN token, emission, staking, rewards, slashing, and treasury for the Chitin Protocol"
license = "Apache-2.0 OR MIT"

[dependencies]
chitin-core = { path = "../chitin-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
