[package]
name = "chitin-p2p"
version = "0.1.0"
edition = "2021"
description = "libp2p networking: transport, discovery, gossip, axon, dendrite for the Chitin Protocol"
license = "Apache-2.0 OR MIT"

[dependencies]
chitin-core = { path = "../chitin-core" }
chitin-store = { path = "../chitin-store" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
async-trait = "0.1"
tracing = "0.1"
libp2p = { version = "0.54", features = ["tokio", "tcp", "quic", "dns", "noise", "yamux", "gossipsub", "kad", "mdns", "identify", "request-response", "cbor", "macros", "serde"] }
