[package]
name = "chitin-rpc"
version = "0.1.0"
edition = "2021"
description = "gRPC/JSON-RPC server and handlers for the Chitin Protocol"
license = "Apache-2.0 OR MIT"

[dependencies]
chitin-core = { path = "../chitin-core" }
chitin-store = { path = "../chitin-store" }
chitin-consensus = { path = "../chitin-consensus" }
chitin-economics = { path = "../chitin-economics" }
chitin-reputation = { path = "../chitin-reputation" }
tonic = "0.12"
prost = "0.13"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
async-trait = "0.1"
tracing = "0.1"
uuid = { version = "1", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
bytes = "1"
http = "1"
http-body = "1"
http-body-util = "0.1"
tower-service = "0.3"
