[project]
name = "chitin-py"
version = "0.1.0"
description = "Python SDK for the Chitin Protocol (Reefipedia)"
requires-python = ">=3.10"
dependencies = [
    "grpcio>=1.60.0",
    "grpcio-tools>=1.60.0",
    "protobuf>=4.25.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
langchain = ["langchain-core>=0.1.0"]
dev = ["pytest>=7.0", "pytest-asyncio>=0.23.0"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
